--- a/_posts/2015-10-26-rlem.md
+++ b/_posts/2015-10-26-rlem.md
@@ -5,17 +5,10 @@ title: Chasing the redlegged earth mite
 
 I've got a new paper out now in <em> Diversity & Distributions</em>. This paper was actually started back during my PhD. Most of the work was in my final experimental chapter, but it wasn't quite ready to submit. 2.5 years later, its been reworked, reanalysed, reviewed, resubmitted and now accepted! It was a long process to get the rest of the data and analysis, but it turned out nice in the end. Whats particularly important to me about this paper is that it rounds off the story of my investigations of a pest species called the redlegged earth mite, <em>Halotydeus destructor</em>.
 
-This mite has played a big role in my career to date, with this being my third paper on the species. Research on this species required me to learn how to apply species distribution models, perform ecophysiological experiments and spend some time at the bench with a pipette getting samples ready for pop gen analysis. Some of this work has been previously written about on the [CSIRO news site](http://csironewsblog.com/2014/07/08/mite-as-well-call-australia-home-the-immigration-success-story-of-the-redlegged-earth-mite/) last year. In 2011 I came to South Africa to trace the origins of this species and collect samples to test hypotheses we had come up with from the species distribution models; essentially that the mites had shifted in thermal tolerances allowing them to undergo range expansion. This trip was also how I first met the team at the Centre for Invasion Biology, which then lead to my current postdoctoral position. After collecting populations in both native and invasive ranges I performed some thermal physiological experiments loking at the upper and lower thresholds for movement and activity. From these it was clear that there were differences between the Australian and South African populations. However, within South Africa there was a huge amount of variation in thermal tolerance.
+This mite has played a big role in my career to date, with this being my third paper on the species. Research on this species required me to learn how to apply species distribution models, perform ecophysiological experiments and spend some time at the bench with a pipette getting samples ready for pop gen analysis. Some of this work has been previously written about on the [CSIRO news site](http://csironewsblog.com/2014/07/08/mite-as-well-call-australia-home-the-immigration-success-story-of-the-redlegged-earth-mite/) last year. In 2011 I came to South Africa to trace the origins of this species and collect samples to test hypotheses we had come up with from the species distribution models; essentially that the mites had shifted in thermal tolerances allowing them to undergo range expansion. This trip was also how I first met the team at the Centre for Invasion Biology, which then lead to my current postdoctoral position. After collecting populations in both native and invasive ranges I performed some thermal physiological experiments looking at the upper and lower thresholds for movement and activity. From these it was clear that there were differences between the Australian and South African populations. However, within South Africa there was a huge amount of variation in thermal tolerance.
 
 To test how population structure might contribute to these differences (and other things like connectedness and gene flow), we developed a microsat library in addition to using COI across the populations. We found that the populations I sampled in South Africa are actually likely to be not highly variant populations, but in fact different species! Earlier work had hinted at some cryptic species, and at least described one other- but not to this extent! This means there is plenty of more work to be done unravelling the native endemic mite fauna in South Africa and their host plant associations. 
 
 And, funnily enough, the South African population that matched closest genetically to the Australian populations (so the source of the invasion) are from Stellenbosch - I sampled them a street away from the University! I was kind of worried for a bit that I'd published a paper comparing physiology between species rather than populations, but these Stellenbosch mites are the same species and they displayed differences in physiological traits to the Australian populations (phew!), so my hypotheses still hold.
 
 * <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2015) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385 [Article](http://onlinelibrary.wiley.com/doi/10.1111/ddi.12385/abstract) or [email me](mailto:matthill@protonmail.com).
-
-
-
-
-
- 
-
