--- a/_posts/2015-07-19-swc.md
+++ b/_posts/2015-07-19-swc.md
@@ -8,7 +8,7 @@ These workshops are a great open initiative to demonstrate a bit of coding, vers
 
 Given that I'm pretty familiar with R, I chose to check out the Python side of things. It was a pretty packed couple of days covering the unix shell (bash), git, Python and SQL. I'm a complete Python novice, but we started out with the very basics - straight from the shell and using the simple text editor, nano. I can really see the strengths of Python for the integration it has with the shell and the way it can call SQL to do some nice data wrangling. Although, I have to admit, it wouldn't replace R in that regard for me. For ecological datasets that I deal with, R is more than enough. Python totally makes sense if you're assembling genomes or processing weather station data sized datasets though. However, I'm going to try and rewrite some of the geospatial scripts I have done in R in Python. I think there is some scope there to get those written up as nice tools rather than messy and cumbersome R functions.
 
-Overall, I would recommend to get along to one of these workshops, but do so with an expectation to get an overview rather than expect any sort of training. You're going to get a taste of a bunch of different tools to automate your workflow, not become proficient in any one of them (as some might expexct(!!)).
+Overall, I would recommend to get along to one of these workshops, but do so with an expectation to get an overview rather than expect any sort of training. You're going to get a taste of a bunch of different tools to automate your workflow, not become proficient in any one of them (as some might expect(!!)).
 
 My personal take aways are the following:
 
@@ -16,5 +16,3 @@ My personal take aways are the following:
   * Now inspired to run my blog through github.
   * Using sublime text for scripting (for now).
   * Time to learn Python and geospatial packages
- 
-
